# cadenza

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
actions-gen/: runMe.py  scene_basic.xml
actions-gen/kondo/: kondo_khr3hv.xml
cadenza/: CMakeLists.txt  __init__.py  __main__.py  cadenza.toml.schema  disturbance.py  g1.py  sim.py
cadenza/actions/: library.py
cadenza/aicore/: __init__.py  aicore_api.h  aicore_main.cpp  engine.py  models.py  perception_fusion.cpp  planner.py  reasoning_engine.cpp  slm.py  vision.py
cadenza/cli/: main.cpp
cadenza/cli/commands/: cmd_ai.cpp  cmd_aios.cpp  cmd_attach.cpp  cmd_build.cpp  cmd_deploy.cpp  cmd_detach.cpp  cmd_init.cpp  cmd_kernel.cpp  cmd_log.cpp  cmd_rl.cpp  cmd_shell.cpp  cmd_sim.cpp  commands.h
cadenza/deploy/: go1_driver.py  ssh.py
cadenza/dsk/scheduler/: dsk_api.h  edf_scheduler.cpp  priority_queue.cpp  rms_scheduler.cpp
cadenza/dsk/timer/: hpet_timer.cpp
cadenza/dsk/watchdog/: task_watchdog.cpp
cadenza/hal/transducers/: transducer_api.h
cadenza/ikm/ipc/: ikm_bus.cpp  ikm_bus.h
cadenza/ikm/multi_robot/: fleet_comms.cpp  fleet_comms.h
cadenza/ikm/shared_memory/: lockfree_queue.cpp  lockfree_queue.h  shm_pool.cpp  shm_pool.h
cadenza/kernel_sdk/: cadenza_kernel.h  example_kernel.cpp
cadenza/locomotion/: __init__.py  bipedal_gait.py  kinematics.py
cadenza/models/g1/: g1_full.xml  walk_cycle_qpos.npy  walk_qpos.npy
cadenza/parser/: __init__.py  optimizer.py  translator.py
cadenza/robots/: __init__.py
cadenza/robots/g1/: __init__.py
cadenza/robots/go1/: __init__.py  primitives.py
cadenza/robots/go1/augmented/: augmented_actions.json  walk_forward_rough_terrain_trajectory.npz
cadenza/scripts/: setup.sh
cadenza/tests/: test_dsk_scheduling.cpp  test_ikm_throughput.cpp  test_package_hotload.cpp
cadenza/vla/: __init__.py
cadenza_local/: __init__.py  __main__.py  annotate.py  depth.py  g1.py  g1_gait.py  go1.py  motion_mapper.py  pose.py  robot_setup.py  sim.py  task.py  vision.py
cadenza_local/actions/: __init__.py  benchmarks.py  library.py
cadenza_local/actions/trained/: g1_trained_actions.py
cadenza_local/deploy/: __init__.py  bridge.py  g1_driver.py  go1_driver.py  ssh.py
cadenza_local/locomotion/: __init__.py  balance.py  bipedal_gait.py  config.py  episode_guide.py  gait_engine.py  groq_agent.py  kinematics.py  local_agent.py  robot_spec.py  terrain_classifier.py  visualizer.py  zmp_controller.py
cadenza_local/locomotion/memory/: __init__.py  mapmem.py  safetymem.py  skillmem.py  stm.py  usermem.py
cadenza_local/locomotion/runtime/: __init__.py  controller.py  logger.py
cadenza_local/locomotion/zmp/: lib_ZMPctrl.py
cadenza_local/lora/: __init__.py  optimizer.py  translator.py
cadenza_local/models/g1/: walk_cycle_ctrl.npy  walk_floor_solimp.npy  walk_floor_solref.npy  walk_init_qpos.npy  walk_stand_qpos.npy
cadenza_local/presets/: __init__.py  analyzer.py  builder.py  dynamics.py  microsteps.py  motion_intake.py  motor_profile.py  robot_profile.py  schemas.py
cadenza_local/robots/: __init__.py
cadenza_local/robots/g1/: __init__.py  primitives.py
cadenza_local/robots/go1/: __init__.py  primitives.py
cadenza_local/vla_steer/: __init__.py  bank.py  pipeline.py  steer.py
examples/bartender/: example_bartender.py  preset_output.txt  task.txt
examples/bartender/assets/: so101.xml
examples/mountain_goat/: mountain_goat.py  terrain.xml
examples/smolvla-test/: depth_anything_v2_small.py  test.py
examples/unitree_g1/: deploy_g1.py
examples/unitree_go1/: deploy_go1.py
gym3d/: __init__.py  env.py
gym3d/assets/: go1.xml
models/g1/: scene.xml  stand_q.npy  walk_cycle_q.npy  walk_cycle_t.npy  walk_fourier_coeffs.npy  walk_init_ctrl.npy  walk_stride_ctrl.npy
models/go1/: obstacle_scene.xml
src/: __init__.py  __main__.py  g1_gait.py  go1.py  sim.py
src/actions/: __init__.py
src/actions/trained/: g1_trained_actions.py
src/deploy/: __init__.py  bridge.py  connection.py  g1_driver.py
src/locomotion/: gait_engine.py
src/models/g1/: walk_ctrl.npy  walk_dt.npy  walk_stand_ctrl.npy
src/models/go1/: scene.xml
src/robots/g1/: __init__.py  primitives.py
src/robots/go1/: __init__.py
src/stack/: __init__.py  bridge.py  builder.py  detector.py  gym_adapter.py  runtime.py  trajectory.py  vocabulary.py
src/stack/adapters/: __init__.py  base.py  mock.py  openvla.py  pi_zero.py  smolvla.py
src/stack/modalities/: __init__.py  base.py
src/stack/vision/: __init__.py  depth.py  navigator.py
src/vla/: guardian.py
tests/: test_forcespace.py  test_g1_trained_stability.py  test_go1_actions.py  test_vla_obstacle.py
tests/ros2-compatibility/: Dockerfile.ros2  test_ros2_integration.py
