[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cadenza"
version = "2.0.0"
description = "Developer-first action library for Unitree robots"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "mujoco",
    "click>=8.0",
]

[project.optional-dependencies]
deploy = ["paramiko"]

[project.scripts]
cadenza = "cadenza.__main__:cli"

[tool.setuptools.packages.find]
include = ["cadenza*"]
