[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadenza"
version = "1.2.0"
description = "Cadenza - A simple Python SDK to deploy complex robot actions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "mujoco",
    "click>=8.0",
]

[project.optional-dependencies]
deploy = ["paramiko"]

[project.scripts]
cadenza = "cadenza.__main__:cli"

[tool.setuptools.packages.find]
include = ["cadenza*"]
